add defined type sql